--- a/3-excercises/Lesson-12-flexbox/styles/header.css
+++ b/3-excercises/Lesson-12-flexbox/styles/header.css
@@ -6,12 +6,19 @@
 
 .left-section {
     background-color: lightblue;
+    width: 150px;
 }
 
 .middle-section {
     background-color: lightpink;
+    flex: 1;
+    margin-left: 70px;
+    margin-right: 35px;
+    max-width: 500px;
+
 }
 
 .right-section {
     background-color: lightblue;
+    width: 200px;
 }
